# 240-MP

./: .gitignore  ARCHITECTURE.md  BUILDING.md  CLAUDE.md  CMakeLists.txt  INSTALL.md  Main.qml  README.md
.github/workflows/: release.yml
assets/images/: 240-mp.icns
assets/images/240-mp.icon/: icon.json
modules/ambient_mode/: manifest.json
modules/ambient_mode/views/: Items.qml  Player.qml  Root.qml
modules/jellyfin/: README.md  manifest.json
modules/jellyfin/views/: Auth.qml  Item.qml  ItemSeason.qml  Items.qml  Libraries.qml  Player.qml  QuickConnect.qml  Root.qml
modules/local_files/: manifest.json
modules/local_files/views/: Items.qml  Player.qml  Root.qml
modules/plex/: manifest.json
modules/plex/views/: Item.qml  ItemSeason.qml  ItemShow.qml  Items.qml  Libraries.qml  Library.qml  PinAuth.qml  Player.qml  Root.qml  ServerSelect.qml  UserSelect.qml
modules/youtube/views/: Items.qml  Subscriptions.qml
scripts/: install.sh  mpv-osc.lua  run-local.sh
src/: AppCore.cpp  AppCore.h  macos_utils.h  macos_utils.mm  main.cpp
src/modules/ambient_mode/: AmbientModeBackend.cpp
src/modules/jellyfin/: JellyfinBackend.cpp  JellyfinBackend.h
src/player/: MpvController.cpp  MpvController.h
tests/: CMakeLists.txt  TestHelpers.cpp  TestHelpers.h
tests/jellyfin/: JellyfinBackendTest.cpp  ManifestTest.cpp
tests/mocks/: FakeNetworkReply.cpp  FakeNetworkReply.h  MockNetworkAccessManager.cpp  MockNetworkAccessManager.h
views/: DirectoryBrowser.qml  ModuleList.qml  ModuleSettings.qml  MultiSelectSettings.qml  Settings.qml
(+6 files in other folders)
